fix: :speech_balloon: Remove underline for periods in texts added with Figma v5 on Case File Modal
Remove underline for periods in texts added with Figma v5 on Case File Modal

--- a/src/components/Case-Files/CaseFileModal.astro
+++ b/src/components/Case-Files/CaseFileModal.astro
@@ -375,7 +375,7 @@ import PatientCaseFilesWrapper from "./PatientCaseFilesWrapper.astro";
                   </div>
                   <p  class="patient--small patient--anna-mobile-1">
                     <small>
-                      <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0.</span>
+                      <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0</span>.
                     </small>
                   </p>
                 </div>
@@ -470,7 +470,7 @@ import PatientCaseFilesWrapper from "./PatientCaseFilesWrapper.astro";
               </div>
             </PinchToZoom>
             <p class="pt-3-image-1--permissions">
-              <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0.</span>
+              <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0</span>.
             </p>
           </Fragment>
           <Fragment slot="symptoms">
@@ -604,7 +604,7 @@ import PatientCaseFilesWrapper from "./PatientCaseFilesWrapper.astro";
             </div>
 
             <p class="pt-3-image-1--permissions">
-              <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0.</span>
+              <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0</span>.
             </p>
           </Fragment>
           <Fragment slot="notes">
