--- a/src/components/Case-Files/CaseFileModalDesktop.astro
+++ b/src/components/Case-Files/CaseFileModalDesktop.astro
@@ -541,7 +541,7 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                                                 Radiograph showing enlarged pulp chambers and shape abnormalities.
                                             </p>
                                             <small>
-                                                <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0.</span>
+                                                <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0</span>.
                                             </small>
                                         </div>
                                     </div>
@@ -660,7 +660,7 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                                                 Nontraumatic tooth loss at age 4
                                             </p>
                                             <small>
-                                                <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0.</span>
+                                                <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0</span>.
                                             </small>
                                         </div>
                                     </div>
@@ -839,7 +839,7 @@ import PatientCaseFileDesktop from "./PatientCaseFileDesktop.astro";
                                                 age 4
                                             </p>
                                             <p class="patient--child mw--40ch">
-                                                <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0.</span>
+                                                <span class="text--underline">Dental manifestations of hypophosphatasia in children and the effects of enzyme replacement therapy on dental status: A series of clinical cases</span> by Larisa Kiselnikova is licensed under <span class="text--underline">CC BY 4.0</span>.
                                             </p>
                                         </div>
                                     </div>
