--- a/src/components/usual-suspects/modals/ModalInfantsDesktop.astro
+++ b/src/components/usual-suspects/modals/ModalInfantsDesktop.astro
@@ -296,10 +296,10 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
         <div class="col">
           <References>
             <strong> 1.</strong> Offiah AC, Vockley J, Munns CF, Murotsuki J. Differential
-            diagnosis of perinatal hypophosphatasia: radiologic perspectives. Pediatr
-            Radiol. 2019;49(1)3-22. <strong> 2.</strong> Mornet E, Hofmann C, Bloch-Zupan
+            diagnosis of perinatal hypophosphatasia: radiologic perspectives. <i class="text--italic">Pediatr
+                Radiol</i>. 2019;49(1)3-22. <strong> 2.</strong> Mornet E, Hofmann C, Bloch-Zupan
             A, Girschick H, Le Merrer M. Clinical utility gene card for: hypophosphatasia
-            – update 2013. Eur J Hum Gen. 2014;22(4). <strong> 3.</strong> National
+            – update 2013. <i class="text--italic">Eur J Hum Gen</i>. 2014;22(4). <strong> 3.</strong> National
             Institute of Child Health and Human Development. What are the symptoms
             of osteogenesis imperfecta (OI). Accessed March 30, 2023. <a
               target="_blank"
@@ -307,16 +307,16 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
               >https://www.nichd.nih.gov/health/topics/osteogenesisimp/conditioninfo/symptoms</a
             >
             <strong> 4.</strong> Marini JC, Cabral WA. Osteogenesis imperfecta. In:
-            Thakker RV, Whyte MP, Eisman JA, Igarashi T, eds. Genetics of Bone Biology
-            and Skeletal Disease. 2nd ed. Academic Press; 2018;397-420.
+            Thakker RV, Whyte MP, Eisman JA, Igarashi T, eds. <i class="text--italic">Genetics of Bone Biology
+                and Skeletal Disease</i>. 2nd ed. Academic Press; 2018;397-420.
             <strong> 5.</strong> Bloch-Zupan A. Hypophosphatasia: diagnosis and clinical
-            signs - a dental surgeon perspective. Int J Paediatr Dent. 2016;26(6):426-438.
+            signs - a dental surgeon perspective. <i class="text--italic">Int J Paediatr Dent</i>. 2016;26(6):426-438.
             <strong> 6.</strong> Taillandier A, Domingues C, De Cazanove C, et al.
             Molecular diagnosis of hypophosphatasia and differential diagnosis by
-            targeted Next Generation Sequencing. Mol Genet Metab. 2015;116(3):215-220.
+            targeted Next Generation Sequencing. <i class="text--italic">Mol Genet Metab</i>. 2015;116(3):215-220.
             <strong> 7.</strong> Duffus S, Thrasher B, Calikoglu AS. Brief clinical
             report: hypophosphatasia–diagnostic considerations and treatment outcomes
-            in an infant. Case Rep Pediatr. 2018;2018:5719761.
+            in an infant. <i class="text--italic">Case Rep Pediatr</i>. 2018;2018:5719761.
             <strong> 8.</strong> National Institutes of Health. Campomelic dysplasia.
             Accessed March 17, 2023. <a
               target="_blank"
@@ -324,26 +324,26 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
               >https://rarediseases.info.nih.gov/diseases/10027/campomelic-dysplasia</a
             >
             <strong> 9.</strong> Simon S, Resch H, Klaushofer K, Roschger P, Zwerina
-            J, Kocijan R. Hypophosphatasia: from diagnosis to treatment. Curr Rheumatol
-            Rep. 2018;20(11):69. <strong> 10.</strong> Macmullan P, McCarthy G. Treatment
-            and management of pseudogout: insights for the clinician. Ther Adv Musculoskelet
-            Dis. 2012;4(2):121-131. <strong> 11.</strong> Villa-Suárez JM, García-Fontana
+            J, Kocijan R. Hypophosphatasia: from diagnosis to treatment. <i class="text--italic">Curr Rheumatol
+                Rep</i>. 2018;20(11):69. <strong> 10.</strong> Macmullan P, McCarthy G. Treatment
+            and management of pseudogout: insights for the clinician. <i class="text--italic">Ther Adv Musculoskelet
+                Dis</i>. 2012;4(2):121-131. <strong> 11.</strong> Villa-Suárez JM, García-Fontana
             C, Andújar-Vera F, et al. Hypophosphatasia: a unique disorder of bone
-            mineralization. Int J Mol Sci. 2021;22(9):4303.
+            mineralization. <i class="text--italic">Int J Mol Sci</i>. 2021;22(9):4303.
             <strong> 12.</strong> Dubail J, Cormier-Daire V. Chondrodysplasias with
             multiple dislocations caused by defects in glycosaminoglycan synthesis.
-            Front Genet. 2021;12:642097. <strong> 13.</strong> Mohn A, De Leonibus
+            <i class="text--italic">Front Genet</i>. 2021;12:642097. <strong> 13.</strong> Mohn A, De Leonibus
             C, de Giorgis T, Mornet E, Chiarelli F. Hypophosphatasia in a child with
             widened anterior fontanelle: lessons learned from late diagnosis and
-            incorrect treatment. Acta Paediatr. 2011;100(7):e43-e46. <strong>
+            incorrect treatment. <i class="text--italic">Acta Paediatr</i>. 2011;100(7):e43-e46. <strong>
               14.</strong
             >
             Tournis S, Yavropoulou MP, Polyzos SA, Doulgeraki A. Hypophosphatasia.
-            J Clin Med. 2021;10(23):5676. <strong> 15.</strong> Pettifor JM. Nutritional
-            rickets. In: Glorieux FH, Pettifor JM, Jüppner H, eds. Pediatric Bone.
+            <i class="text--italic">J Clin Med</i>. 2021;10(23):5676. <strong> 15.</strong> Pettifor JM. Nutritional
+            rickets. In: Glorieux FH, Pettifor JM, Jüppner H, eds. <i class="text--italic">Pediatric Bone</i>.
             2nd ed. Academic Press; 2012:625-654. <strong> 16.</strong> Mckiernan
             FE, Dong J, Berg RL, et al. Mutational and biochemical findings in adults
-            with persistent hypophosphatasemia. Osteoporos Int. 2017;28:2343-2348.
+            with persistent hypophosphatasemia. <i class="text--italic">Osteoporos Int</i>. 2017;28:2343-2348.
             <strong> 17.</strong> Genetic and Rare Disease Information Center. Cleidocranial
             dysplasia. Accessed March 30, 2023. <a
               target="_blank"
@@ -359,17 +359,17 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
             >
               19.</strong
             > Nunes ME. Hypophosphatasia. In: Adam MP, Ardinger HH, Pagon RA, et
-            al, eds. GeneReviews®. University of Washington; 2007. Accessed March
+            al, eds. <i class="text--italic">GeneReviews®</i>. University of Washington; 2007. Accessed March
             30, 2023.
             <a target="_blank" href="http://www.ncbi.nlm.nih.gov/books/NBK1150/"
               >http://www.ncbi.nlm.nih.gov/books/NBK1150/</a
             >
-            <strong> 20.</strong> Rockman-Greenberg C. Hypophosphatasia. Pediatr
-            Endocrinol Rev. 2013;10(suppl 2):380-388. <strong> 21.</strong> Imerci
+            <strong> 20.</strong> Rockman-Greenberg C. Hypophosphatasia. <i class="text--italic">Pediatr
+                Endocrinol Rev</i>. 2013;10(suppl 2):380-388. <strong> 21.</strong> Imerci
             A, Canbek U, Haghari S, Surer L, Kocak M. Idiopathic juvenile osteoporosis:
-            a case report and review of the literature. Int J Surg Case Rep. 2015;9;127-129.
+            a case report and review of the literature. <i class="text--italic">Int J Surg Case Rep</i>. 2015;9;127-129.
             <strong> 22.</strong> Kulkarni ML, Keshavamurthy KS. Juvenile idiopathic
-            osteoporosis. Indian Pediatr. 2004;41(7):737-740. <strong>
+            osteoporosis. <i class="text--italic">Indian Pediatr</i>. 2004;41(7):737-740. <strong>
               23.</strong
             >
             Genetic and Rare Disease Information Center. X-linked hypophosphatemia.
@@ -379,10 +379,10 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
               >https://rarediseases.info.nih.gov/diseases/12943/x-linked-hypophosphatemia</a
             >
             <strong> 24.</strong> Abel MD, Carrasco LR. Ehlers-Danlos syndrome: classifications,
-            oral manifestations, and dental considerations. Oral Surg Oral Med Oral
-            Pathol Oral Radiol Endod. 2006;102(5):582-590. <strong> 25.</strong>
+            oral manifestations, and dental considerations. <i class="text--italic">Oral Surg Oral Med Oral
+                Pathol Oral Radiol Endod</i>. 2006;102(5):582-590. <strong> 25.</strong>
             Sobey G. Ehlers-Danlos syndrome: how to diagnose and when to perform
-            genetic tests. Arch Dis Child. 2015;100(1):57-61.
+            genetic tests. <i class="text--italic">Arch Dis Child</i>. 2015;100(1):57-61.
           </References>
         </div>
       </div><!-- end of grid -->
