--- a/src/components/usual-suspects/modals/ModalInfantsMobile.astro
+++ b/src/components/usual-suspects/modals/ModalInfantsMobile.astro
@@ -274,100 +274,94 @@ import Accordion from "../../Accordion.astro";
           className="references__acc"
         >
           <p class="usual-suspect__acc--references">
-            <strong>1.</strong> Offiah AC, Vockley J, Munns CF, Murotsuki J. Differential
-            diagnosis of perinatal hypophosphatasia: radiologic perspectives. <em
-              >Pediatr Radiol.</em
-            > 2019;49(1)3-22.
-            <strong>2.</strong> Mornet E, Hofmann C, Bloch-Zupan A, Girschick H,
-            Le Merrer M. Clinical utility gene card for: hypophosphatasia – update
-            2013. <em>Eur J Hum Gen.</em> 2014;22(4). <strong>3.</strong> National
+            <strong> 1.</strong> Offiah AC, Vockley J, Munns CF, Murotsuki J. Differential
+            diagnosis of perinatal hypophosphatasia: radiologic perspectives. <i class="text--italic">Pediatr
+                Radiol</i>. 2019;49(1)3-22. <strong> 2.</strong> Mornet E, Hofmann C, Bloch-Zupan
+            A, Girschick H, Le Merrer M. Clinical utility gene card for: hypophosphatasia
+            – update 2013. <i class="text--italic">Eur J Hum Gen</i>. 2014;22(4). <strong> 3.</strong> National
             Institute of Child Health and Human Development. What are the symptoms
             of osteogenesis imperfecta (OI). Accessed March 30, 2023. <a
-              href=" https://www.nichd.nih.gov/health/topics/osteogenesisimp/conditioninfo/symptoms"
+              target="_blank"
+              href="https://www.nichd.nih.gov/health/topics/osteogenesisimp/conditioninfo/symptoms"
               >https://www.nichd.nih.gov/health/topics/osteogenesisimp/conditioninfo/symptoms</a
             >
-            <strong>4.</strong> Marini JC, Cabral WA. Osteogenesis imperfecta. In:
-            Thakker RV, Whyte MP, Eisman JA, Igarashi T, eds. <em
-              >Genetics of Bone Biology and Skeletal Disease.</em
-            > 2nd ed. Academic Press; 2018;397-420. <strong>5.</strong> Bloch-Zupan
-            A. Hypophosphatasia: diagnosis and clinical signs - a dental surgeon
-            perspective. <em>Int J Paediatr Dent.</em> 2016;26(6):426-438. <strong
-              >6.</strong
-            > Taillandier A, Domingues C, De Cazanove C, et al. Molecular diagnosis
-            of hypophosphatasia and differential diagnosis by targeted Next Generation
-            Sequencing. <em>Mol Genet Metab.</em> 2015;116(3):215-220.
-            <strong>7.</strong> Duffus S, Thrasher B, Calikoglu AS. Brief clinical
+            <strong> 4.</strong> Marini JC, Cabral WA. Osteogenesis imperfecta. In:
+            Thakker RV, Whyte MP, Eisman JA, Igarashi T, eds. <i class="text--italic">Genetics of Bone Biology
+                and Skeletal Disease</i>. 2nd ed. Academic Press; 2018;397-420.
+            <strong> 5.</strong> Bloch-Zupan A. Hypophosphatasia: diagnosis and clinical
+            signs - a dental surgeon perspective. <i class="text--italic">Int J Paediatr Dent</i>. 2016;26(6):426-438.
+            <strong> 6.</strong> Taillandier A, Domingues C, De Cazanove C, et al.
+            Molecular diagnosis of hypophosphatasia and differential diagnosis by
+            targeted Next Generation Sequencing. <i class="text--italic">Mol Genet Metab</i>. 2015;116(3):215-220.
+            <strong> 7.</strong> Duffus S, Thrasher B, Calikoglu AS. Brief clinical
             report: hypophosphatasia–diagnostic considerations and treatment outcomes
-            in an infant. Case Rep Pediatr. 2018;2018:5719761.
-            <strong>8.</strong> National Institutes of Health. Campomelic dysplasia.
+            in an infant. <i class="text--italic">Case Rep Pediatr</i>. 2018;2018:5719761.
+            <strong> 8.</strong> National Institutes of Health. Campomelic dysplasia.
             Accessed March 17, 2023. <a
+              target="_blank"
               href="https://rarediseases.info.nih.gov/diseases/10027/campomelic-dysplasia"
               >https://rarediseases.info.nih.gov/diseases/10027/campomelic-dysplasia</a
             >
-            <strong>9.</strong> Simon S, Resch H, Klaushofer K, Roschger P, Zwerina
-            J, Kocijan R. Hypophosphatasia: from diagnosis to treatment. <em
-              >Curr Rheumatol Rep</em
-            >. 2018;20(11):69. <strong>10.</strong>
-            Macmullan P, McCarthy G. Treatment and management of pseudogout: insights
-            for the clinician. <em>Ther Adv Musculoskelet Dis.</em> 2012;4(2):121-131.
-            <strong>11.</strong> Villa-Suárez JM, García-Fontana C, Andújar-Vera
-            F, et al. Hypophosphatasia: a unique disorder of bone mineralization.
-            <em>Int J Mol Sci.</em> 2021;22(9):4303. <strong>12.</strong>
-            Dubail J, Cormier-Daire V. Chondrodysplasias with multiple dislocations
-            caused by defects in glycosaminoglycan synthesis.
-            <em>Front Genet.</em> 2021;12:642097. <strong>13.</strong> Mohn A, De
-            Leonibus C, de Giorgis T, Mornet E, Chiarelli F. Hypophosphatasia in
-            a child with widened anterior fontanelle: lessons learned from late diagnosis
-            and incorrect treatment.
-            <em>Acta Paediatr.</em> 2011;100(7):e43-e46. <strong>14.</strong>
+            <strong> 9.</strong> Simon S, Resch H, Klaushofer K, Roschger P, Zwerina
+            J, Kocijan R. Hypophosphatasia: from diagnosis to treatment. <i class="text--italic">Curr Rheumatol
+                Rep</i>. 2018;20(11):69. <strong> 10.</strong> Macmullan P, McCarthy G. Treatment
+            and management of pseudogout: insights for the clinician. <i class="text--italic">Ther Adv Musculoskelet
+                Dis</i>. 2012;4(2):121-131. <strong> 11.</strong> Villa-Suárez JM, García-Fontana
+            C, Andújar-Vera F, et al. Hypophosphatasia: a unique disorder of bone
+            mineralization. <i class="text--italic">Int J Mol Sci</i>. 2021;22(9):4303.
+            <strong> 12.</strong> Dubail J, Cormier-Daire V. Chondrodysplasias with
+            multiple dislocations caused by defects in glycosaminoglycan synthesis.
+            <i class="text--italic">Front Genet</i>. 2021;12:642097. <strong> 13.</strong> Mohn A, De Leonibus
+            C, de Giorgis T, Mornet E, Chiarelli F. Hypophosphatasia in a child with
+            widened anterior fontanelle: lessons learned from late diagnosis and
+            incorrect treatment. <i class="text--italic">Acta Paediatr</i>. 2011;100(7):e43-e46. <strong>
+              14.</strong
+            >
             Tournis S, Yavropoulou MP, Polyzos SA, Doulgeraki A. Hypophosphatasia.
-            <em>J Clin Med.</em> 2021;10(23):5676. <strong>15.</strong> Pettifor
-            JM. Nutritional rickets. In: Glorieux FH, Pettifor JM, Jüppner H, eds.
-            <em>Pediatric Bone.</em> 2nd ed. Academic Press; 2012:625-654.
-            <strong>16.</strong>
-            Mckiernan FE, Dong J, Berg RL, et al. Mutational and biochemical findings
-            in adults with persistent hypophosphatasemia. <em
-              >Osteoporos Int.</em
-            >2017;28:2343-2348.
-            <strong>17.</strong> Genetic and Rare Disease Information Center. Cleidocranial
-            dysplasia. Accessed March 30, 2023.
-            <a
+            <i class="text--italic">J Clin Med</i>. 2021;10(23):5676. <strong> 15.</strong> Pettifor JM. Nutritional
+            rickets. In: Glorieux FH, Pettifor JM, Jüppner H, eds. <i class="text--italic">Pediatric Bone</i>.
+            2nd ed. Academic Press; 2012:625-654. <strong> 16.</strong> Mckiernan
+            FE, Dong J, Berg RL, et al. Mutational and biochemical findings in adults
+            with persistent hypophosphatasemia. <i class="text--italic">Osteoporos Int</i>. 2017;28:2343-2348.
+            <strong> 17.</strong> Genetic and Rare Disease Information Center. Cleidocranial
+            dysplasia. Accessed March 30, 2023. <a
+              target="_blank"
               href="https://rarediseases.info.nih.gov/diseases/6118/cleidocranial-dysplasia"
               >https://rarediseases.info.nih.gov/diseases/6118/cleidocranial-dysplasia</a
             >
-            <strong>18.</strong> Center of Disease Control. Facts about craniosynostosis.
+            <strong> 18.</strong> Center of Disease Control. Facts about craniosynostosis.
             Accessed March 30, 2023. <a
-              href="https://www.cdc.gov/ncbddd/birthdefects
-                        craniosynostosis.html#:~:text=What%20is%20Craniosynostosis"
-              >https://www.cdc.gov/ncbddd/birthdefects
-              craniosynostosis.html#:~:text=What%20is%20Craniosynostosis</a
+              target="_blank"
+              href="https://www.cdc.gov/ncbddd/birthdefects"
+              >https://www.cdc.gov/ncbddd/birthdefects</a
+            > craniosynostosis.html#:~:text=What%20is%20Craniosynostosis <strong
             >
-            <strong>19.</strong> Nunes ME. Hypophosphatasia. In: Adam MP, Ardinger
-            HH, Pagon RA, et al, eds. <em>GeneReviews®</em>. University of
-            Washington; 2007. Accessed March 30, 2023. <a
-              href="http://www.ncbi.nlm.nih.gov/books/NBK1150/"
+              19.</strong
+            > Nunes ME. Hypophosphatasia. In: Adam MP, Ardinger HH, Pagon RA, et
+            al, eds. <i class="text--italic">GeneReviews®</i>. University of Washington; 2007. Accessed March
+            30, 2023.
+            <a target="_blank" href="http://www.ncbi.nlm.nih.gov/books/NBK1150/"
               >http://www.ncbi.nlm.nih.gov/books/NBK1150/</a
             >
-            <strong>20.</strong>
-            Rockman-Greenberg C. Hypophosphatasia. <em
-              >Pediatr Endocrinol Rev.</em
-            > 2013;10(suppl 2):380-388. <strong>21.</strong> Imerci A, Canbek U,
-            Haghari S, Surer L, Kocak M. Idiopathic juvenile osteoporosis: a case
-            report and review of the literature.
-            <em>Int J Surg Case Rep.</em> 2015;9;127-129. <strong>22.</strong>
-            Kulkarni ML, Keshavamurthy KS. Juvenile idiopathic osteoporosis.
-            <em>Indian Pediatr.</em> 2004;41(7):737-740. <strong>23.</strong>
+            <strong> 20.</strong> Rockman-Greenberg C. Hypophosphatasia. <i class="text--italic">Pediatr
+                Endocrinol Rev</i>. 2013;10(suppl 2):380-388. <strong> 21.</strong> Imerci
+            A, Canbek U, Haghari S, Surer L, Kocak M. Idiopathic juvenile osteoporosis:
+            a case report and review of the literature. <i class="text--italic">Int J Surg Case Rep</i>. 2015;9;127-129.
+            <strong> 22.</strong> Kulkarni ML, Keshavamurthy KS. Juvenile idiopathic
+            osteoporosis. <i class="text--italic">Indian Pediatr</i>. 2004;41(7):737-740. <strong>
+              23.</strong
+            >
             Genetic and Rare Disease Information Center. X-linked hypophosphatemia.
             Accessed March 30, 2023. <a
+              target="_blank"
               href="https://rarediseases.info.nih.gov/diseases/12943/x-linked-hypophosphatemia"
               >https://rarediseases.info.nih.gov/diseases/12943/x-linked-hypophosphatemia</a
             >
-            <strong>24.</strong> Abel MD, Carrasco LR. Ehlers-Danlos syndrome: classifications,
-            oral manifestations, and dental considerations. <em
-              >Oral Surg Oral Med Oral Pathol Oral Radiol Endod.</em
-            > 2006;102(5):582-590. <strong>25.</strong> Sobey G. Ehlers-Danlos syndrome:
-            how to diagnose and when to perform genetic tests.
-            <em>Arch Dis Child.</em> 2015;100(1):57-61.
+            <strong> 24.</strong> Abel MD, Carrasco LR. Ehlers-Danlos syndrome: classifications,
+            oral manifestations, and dental considerations. <i class="text--italic">Oral Surg Oral Med Oral
+                Pathol Oral Radiol Endod</i>. 2006;102(5):582-590. <strong> 25.</strong>
+            Sobey G. Ehlers-Danlos syndrome: how to diagnose and when to perform
+            genetic tests. <i class="text--italic">Arch Dis Child</i>. 2015;100(1):57-61.
           </p>
         </Accordion>
       </div>
