--- a/src/components/usual-suspects/tabs/Sections.astro
+++ b/src/components/usual-suspects/tabs/Sections.astro
@@ -100,7 +100,7 @@
 
         <p class="content__paragraph">
             <strong
-            >Based on a study examining bisphophonates in osteoporosis,
+            >Based on a study examining bisphosphonates in osteoporosis,
             the half-life of bisphosphonates was shown to be greater than
             10 years and may have detrimental effects on a patient's
             condition if a wrongful diagnosis is made. Make sure to rule
@@ -202,7 +202,7 @@
             <td colspan="3">
             <p class="content__paragraph">
                 <strong
-                >Based on a study examining bisphophonates in
+                >Based on a study examining bisphosphonates in
                 osteoporosis, the half-life of bisphosphonates was shown
                 to be greater than 10 years and may have detrimental
                 effects on a patient's condition if a wrongful diagnosis
@@ -753,7 +753,7 @@
         intervals of more than 30 days.<sup>3,24</sup>
     </li>
     <li>
-        <sup class="symbol-sup positioned">†</sup>Alkaline phosphatase ranges
+        <sup class="positioned">†</sup>Alkaline phosphatase ranges
         must be age- and sex-adjusted.<sup>3,26</sup>
     </li>
     </ul>
