🐛 Fix some styles

--- a/src/styles/components/_usual-supect-modal.scss
+++ b/src/styles/components/_usual-supect-modal.scss
@@ -1,6 +1,10 @@
 .usual-supect__list_modal--mobile {
     background-color: $color-folder;
 
+    sup {
+        font-size: 65%;
+    }
+
     .usual-supect__list_modal {
         &_wrapper {
             padding: 0 1rem;
