--- a/src/pages/usual-suspects.astro
+++ b/src/pages/usual-suspects.astro
@@ -141,32 +141,32 @@ const internalNavLinks = [
     <p>
       <strong>References:<strong> </strong>1.</strong> McKiernan FE, Berg RL, Fuehrer
       J. Clinical and radiographic findings in adults with persistent hypophosphatasemia.
-      J Bone Miner Res. 2014;29(7):1651-1660. <strong>2.</strong> Offiah AC, Vockley
+      <i class="text--italic">J Bone Miner Res</i>. 2014;29(7):1651-1660. <strong>2.</strong> Offiah AC, Vockley
       J, Munns CF, Murotsuki J. Differential diagnosis of perinatal hypophosphatasia:
-      radiologic perspectives. Pediatr Radiol. 2019;49(1):3-22. <strong
+      radiologic perspectives. <i class="text--italic">Pediatr Radiol</i>. 2019;49(1):3-22. <strong
         >3.</strong
-      > Rockman-Greenberg C. Hypophosphatasia. Pediatr Endocrinol Rev. 2013;10(suppl
+      > Rockman-Greenberg C. Hypophosphatasia. <i class="text--italic">Pediatr Endocrinol Rev</i>. 2013;10(suppl
       2):380-388. <strong>4.</strong> Weber TJ, Sawyer EK, Moseley S, Odrljin T,
       Kishnani PS. Burden of disease in adult patients with hypophosphatasia: results
-      from two patient-reported surveys. Metabolism. 2016;65(10):1522-1530. <strong
+      from two patient-reported surveys. <i class="text--italic">Metabolism</i>. 2016;65(10):1522-1530. <strong
         >5.</strong
       > Sutton RA, Mumm S, Coburn SP, Ericson KL, Whyte MP. “Atypical femoral fractures”
-      during bisphosphonate exposure in adult hypophosphatasia. J Bone Miner Res.
+      during bisphosphonate exposure in adult hypophosphatasia. <i class="text--italic">J Bone Miner Res</i>.
       2012;27(5):987-994. <strong>6.</strong> Varacallo M, Seaman TJ, Jandu JS, Pizzutillo
       P. Osteopenia. StatPearls [Internet]. 2022. Accessed March 30, 2023. <a
         href="https://www.ncbi.nlm.nih.gov/books/NBK499878/"
         target="_blank">https://www.ncbi.nlm.nih.gov/books/NBK499878/</a
       >
       <strong>7.</strong> Shapiro JR, Lewiecki EM. Hypophosphatasia in adults: clinical
-      assessment and treatment considerations. J Bone Miner Res. 2017;32(10):1977-1980.
+      assessment and treatment considerations. <i class="text--italic">J Bone Miner Res</i>. 2017;32(10):1977-1980.
       <strong>8.</strong> Desborough R, Nicklin P, Gossiel F, et al. Clinical and
       biochemical characteristics of adults with hypophosphatasia attending a metabolic
-      bone clinic. Bone. 2021;144:115795. <strong>9.</strong> Bloch-Zupan A. Hypophosphatasia:
-      diagnosis and clinical signs - a dental surgeon perspective. Int J Paediatr
-      Dent. 2016;26(6):426-438. <strong>10.</strong> Macmullan P, McCarthy G. Treatment
-      and management of pseudogout: insights for the clinician. Ther Adv Muscoloskelet
-      Dis. 2012;4(2):121-131. <strong>11.</strong> Rosenthal AK, Ryan LM. Calcium
-      pyrophosphate deposition disease. N Engl J Med. 2016;374(26):2575-2584. <strong
+      bone clinic. <i class="text--italic">Bone</i>. 2021;144:115795. <strong>9.</strong> Bloch-Zupan A. Hypophosphatasia:
+      diagnosis and clinical signs - a dental surgeon perspective. <i class="text--italic">Int J Paediatr
+        Dent</i>. 2016;26(6):426-438. <strong>10.</strong> Macmullan P, McCarthy G. Treatment
+      and management of pseudogout: insights for the clinician. <i class="text--italic">Ther Adv Muscoloskelet
+        Dis</i>. 2012;4(2):121-131. <strong>11.</strong> Rosenthal AK, Ryan LM. Calcium
+      pyrophosphate deposition disease. <i class="text--italic">N Engl J Med</i>. 2016;374(26):2575-2584. <strong
         >12.</strong
       > National Institute of Arthritis and Musculoskeletal and Skin Diseases. Fibromyalgia.
       Accessed March 30, 2023. <a
@@ -181,8 +181,8 @@ const internalNavLinks = [
         >https://www.nichd.nih.gov/health/topics/osteogenesisimp/conditioninfo/symptoms</a
       >
       <strong>14.</strong> Marini JC, Cabral WA. Osteogenesis imperfecta. In: Thakker
-      RV, Whyte MP, Eisman JA, Igarashi T, eds. Genetics of Bone Biology and Skeletal
-      Disease. Academic Press; 2018;397-420. <strong>15.</strong> Mornet E, Nunes
+      RV, Whyte MP, Eisman JA, Igarashi T, eds. <i class="text--italic">Genetics of Bone Biology and Skeletal
+        Disease</i>. Academic Press; 2018;397-420. <strong>15.</strong> Mornet E, Nunes
       ME. Hypophosphatasia. In: Adam MP, Ardinger HH, Pagon RA, et al, eds. GeneReviews®.
       University of Washington; 2011. Accessed April 3, 2023. <a
         href="http://www.ncbi.nlm.nih.gov/books/NBK1150/?report=reader"
@@ -191,29 +191,29 @@ const internalNavLinks = [
       >
       <strong>16.</strong> Mohn A, De Leonibus C, de Giorgis T, Mornet E, Chiarelli
       F. Hypophosphatasia in a child with widened anterior fontanelle: lessons learned
-      from late diagnosis and incorrect treatment. Acta Paediatr. 2011;100(7):e43-e46.
+      from late diagnosis and incorrect treatment. <i class="text--italic">Acta Paediatr</i>. 2011;100(7):e43-e46.
       <strong>17.</strong> Whyte MP, Wenkert D, McAlister WH, et al. Chronic recurrent
-      multifocal osteomyelitis mimicked in childhood hypophosphatasia. J Bone Miner
-      Res. 2009;24:1493-1505. <strong>18.</strong> Shapiro JR, Lewiecki EM. Hypophosphatasia
-      in adults: clinical assessment and treatment considerations. J Bone Miner Res.
+      multifocal osteomyelitis mimicked in childhood hypophosphatasia. <i class="text--italic">J Bone Miner
+        Res</i>. 2009;24:1493-1505. <strong>18.</strong> Shapiro JR, Lewiecki EM. Hypophosphatasia
+      in adults: clinical assessment and treatment considerations. <i class="text--italic">J Bone Miner Res</i>.
       2017;32(10):1977-1980. <strong>19.</strong> Boyce AM, Tosi LL, Paul SM. Bisphosphonate
       treatment for children with disabling conditions. PM R. 2014;6(5):427-436.
       <strong>20.</strong> Stadecker WJ. Bisphosphonates 101: an update for the general
-      dentist. Inside Dentistry. 2008. <strong>21.</strong> Bianchi ML. Hypophosphatasia:
-      an overview of the disease and its treatment. Osteoporos Int. 2015; 26(12):2743-2757.
+      dentist. <i class="text--italic">Inside Dentistry</i>. 2008. <strong>21.</strong> Bianchi ML. Hypophosphatasia:
+      an overview of the disease and its treatment. <i class="text--italic">Osteoporos Int</i>. 2015; 26(12):2743-2757.
       <strong>22.</strong> Choida V, Bubbear JS. Update on the management of hypophosphatasia.
-      Ther Adv Musculoskelet Dis. 2019;11:1759720X19863997.<strong> 23.</strong>
+      <i class="text--italic">Ther Adv Musculoskelet Dis</i>. 2019;11:1759720X19863997.<strong> 23.</strong>
       Martos-Moreno GA, Calzada J, Couce ML, Argente J. Hypophosphatasia: clinical
-      manifestations, diagnostic recommendations and therapeutic options. An Pediatr
-      (Engl Ed). 2018;88(6):356.e1-356.e11. <strong>24.</strong> Vieira LHR, Peixoto
+      manifestations, diagnostic recommendations and therapeutic options. <i class="text--italic">An Pediatr
+        (Engl Ed)</i>. 2018;88(6):356.e1-356.e11. <strong>24.</strong> Vieira LHR, Peixoto
       KC, Flósi CL, Fleiuss de Farias ML, Madeira M. Active search of adult patients
       with persistently low serum alkaline phosphatase levels for diagnosis of hypophosphatasia.
-      Arch Endocrinol Metab. 2021;65(3):289-294.
+      <i class="text--italic">Arch Endocrinol Metab</i>. 2021;65(3):289-294.
       <strong>25.</strong> Bianchi ML, Bishop NJ, Guañabens N, et al; Rare Bone Disease
       Action Group of the European Calcified Tissue Society. Hypophosphatasia in
-      adolescents and adults: overview of diagnosis and treatment. Osteoporos Int.
+      adolescents and adults: overview of diagnosis and treatment. <i class="text--italic">Osteoporos Int</i>.
       2020;31(8):1445-1460. <strong>26.</strong> Bishop N, Munns CF, Ozono K. Transformative
-      therapy in hypophosphatasia. Arch Dis Child. 2016;101(6):514-515.<p></p>
+      therapy in hypophosphatasia. <i class="text--italic">Arch Dis Child</i>. 2016;101(6):514-515.<p></p>
     </p>
   </References>
 </Layout>
