--- a/src/components/CookieBanner.astro
+++ b/src/components/CookieBanner.astro
@@ -1,4 +1,4 @@
-<div class="cookie">
+<div class="cookie hidden">
   <div class="wrapper cookie__content">
     <p class="cookie__text">
       We use cookies to give you the best online experience. By using our
@@ -24,19 +24,20 @@
   window.addEventListener("resize", setOffsetOfBody);
 
   cookieButton.addEventListener("click", function (e) {
-    hideCookieBanner();
+    showCookieBanner();
     setCookieConsent();
   });
 
   function checkCookie() {
-    if (localStorage.getItem("cookieConsent") === "true") {
-      hideCookieBanner();
+    if (!localStorage.getItem("cookieConsent")) {
+      showCookieBanner();
     }
   }
 
-  function hideCookieBanner() {
-    cookie.classList.add("hidden");
-    body.style.paddingTop = `0`;
+  function showCookieBanner() {
+    cookie.classList.remove("hidden");
+    setOffsetOfBody()
+    // body.style.paddingTop = `0`;
   }
 
   function setCookieConsent() {
