✨ Separate designs style file oƒthe main css

--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -4,8 +4,8 @@ import Accordion from "../components/Accordion.astro";
 import CTA from "../components/CTA.astro";
 import ModalMobile from "../components/usual-suspects/modals/ModalMobile.astro";
 import ModalDesktop from "../components/usual-suspects/modals/ModalDesktop.astro";
-import CaseFileModal from "../components/Case-Files/CaseFileModal.astro";
-import CaseFileModalDesktop from "../components/Case-Files/CaseFileModalDesktop.astro";
+
+import '../styles/settings/design.scss';
 ---
 
 <Layout
