--- a/src/styles/components/_alp-calculator.scss
+++ b/src/styles/components/_alp-calculator.scss
@@ -207,10 +207,11 @@
         .dashed-line {
             position: absolute;
             height: 1px;
-            width: 140px;
+            width: 100%;
             border: 1px dashed red;
-            bottom: 0;
-            left: -20px;
+            top: 0;
+            left: 0;
+            z-index: 1;
         }
 
         .graphic-cover {
@@ -1051,7 +1052,7 @@
     /* .comparisson-block{
         @media screen and (min-width:745px) {
             display: flex;
-        }       
+        }
     } */
 
 }
