--- a/src/styles/components/_alpd-video.scss
+++ b/src/styles/components/_alpd-video.scss
@@ -291,8 +291,10 @@
 
     &--showing-form {
 
-        margin-top: 7rem;
-        margin-bottom: 5rem;
+        @media screen and (min-width: 768px) {
+            margin-top: 7rem;
+            margin-bottom: 5rem;
+        }
 
         @media screen and (min-width: 1600px) {
             margin-top: 19rem;
