--- a/src/styles/components/_alpd-video.scss
+++ b/src/styles/components/_alpd-video.scss
@@ -228,9 +228,12 @@
                 cursor: pointer;
                 z-index: 9;
 
+                @media screen and (min-width: 425px) {
+                    right: 1.5rem;
+                }
+
                 @media screen and (min-width: 768px) {
                     font-size: 2.625rem;
-                    right: 1.5rem;
                 }
 
                 @media screen and (min-width: 803px) {
