🐛 Refactor size until parent size

--- a/src/components/ALPDVideo.astro
+++ b/src/components/ALPDVideo.astro
@@ -42,7 +42,7 @@ import DetectiveForm from "./DetectiveForm.astro";
         <button class="alpd-form__close">x</button>
 
         <iframe
-          class="full-screen iframe"
+          class="iframe"
           id="alpd"
           src="https://main.d1mfcoaeirtvif.amplifyapp.com/?key=det3ct"
           allow="fullscreen; camera; microphone; autoplay;"></iframe>
