--- a/src/styles/components/_alpd-video.scss
+++ b/src/styles/components/_alpd-video.scss
@@ -404,6 +404,8 @@
 .iframe {
     position: relative;
     z-index: 1;
+    height: 100%;
+    width: 100%;
 
     &::-webkit-scrollbar {
         display: none;
