--- a/src/components/stay-conected.astro
+++ b/src/components/stay-conected.astro
@@ -320,7 +320,7 @@
       <h2 class="stay-connected__title">
         Thank you for signing up!
       </h2>
-      <p style="text-align: center;">We Look forward to continuing our connection on important topics in HPP.</p>
+      <p style="text-align: center;">Your'e one step closer to catching HPP! Keep your eyes peeled for more news and information.</p>
     </div>
 
     <!-- absolute elements of the stay connected modal -->
