--- a/src/components/usual-suspects/modals/ModalInfantsDesktop.astro
+++ b/src/components/usual-suspects/modals/ModalInfantsDesktop.astro
@@ -157,7 +157,23 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
   </article>
   <article class="modal__grids_article infants" data-page="2">
     <div class="modal__grids_article--bg--white">
-      <div class="grid grid--bt">
+      <div class="grid align--baseline border--2x">
+        <div class="left">
+          <p class="heading">
+            Differential diagnoses for hypophosphatasia (HPP)
+          </p>
+        </div>
+        <div class="middle">
+          <p class="heading">Shared symptoms</p>
+        </div>
+        <div class="right">
+          <p class="heading">
+            How to differentiate from <br /> hypophosphatasia
+          </p>
+        </div>
+      </div><!-- end of grid -->
+
+      <div class="grid">
         <div class="left">
           <p class="sub-heading">
             Cleidocranial dysostosis<sup>1,5,7,13,16,17</sup>
