fix: :bug: #37 Delete thin lines arund the select in mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4658,6 +4658,7 @@
                 .hpp-multisystemic__title-container {
                     background-color: $color-floral-white;
                     padding-bottom: 1rem;
+                    margin-bottom: -1px;
                 }
 
                 .hpp-multisystemic__tabs-container {
