--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -17,7 +17,7 @@
 
   &:hover,
   &:focus {
-    background-color: $color-black;
+    background-color: $color-blue;
     color: $color-white;
   }
 
