--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4689,7 +4689,7 @@
             &--nav {
                 display: flex;
                 flex-direction: row;
-                justify-content: center;
+                justify-content: flex-start;
                 width: 100%;
                 background-color: transparent;
                 overflow: hidden;
@@ -4701,10 +4701,44 @@
                     display: none;
                     margin-left: 0;
                 }
+
+                :first-child {
+                    margin-left: 16%;
+                }
+                :nth-child(2) {
+                    margin-left: 21%;
+                }
+                :last-child {
+                    margin-left: 16%;
+                }
+
+                @media  screen and (max-width: 1200px) {
+                    :first-child {
+                        margin-left: 16%;
+                    }
+                    :nth-child(2) {
+                        margin-left: 12.5%;
+                    }
+                    :last-child {
+                        margin-left: 11%;
+                    }
+                }
+
+                @media  screen and (max-width: 1300px) {
+                    :first-child {
+                        margin-left: 16%;
+                    }
+                    :nth-child(2) {
+                        margin-left: 14%;
+                    }
+                    :last-child {
+                        margin-left: 13%;
+                    }
+                }
             }
 
             &--nav-item {
-                width: calc((100vw /3) - 1%);
+                //width: calc((100vw /3) - 1%);
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
