--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3903,17 +3903,19 @@
 
             &--text {
                 color: $color-red;
-                font-size: 3.625rem;
-                font-weight: 700;
+                font-size: 5.125rem;
+                font-weight: 500;
                 text-align: center;
                 padding: 3.5rem;
-                font-family: 'Oswald', sans-serif;
-                margin: 3rem 0 0 0;
+                font-family: 'Veneer', sans-serif;
+                margin: 4rem 0 0 0;
 
                 background-image: url(/assets/images/hpp-profile/fingerprint.png);
                 background-repeat: no-repeat;
-                background-size: contain;
+                background-size: auto;
                 background-position: center;
+
+                mix-blend-mode: multiply;
             }
 
             &--content {
