fix: :bug: #43 Adjust some lines appear thiner than others

--- a/src/styles/components/_skeleton.scss
+++ b/src/styles/components/_skeleton.scss
@@ -69,6 +69,7 @@
                 top: 1.7rem;
                 left: 6.8rem;
                 z-index: 0;
+                
             }
 
             .skeleton__word {
@@ -90,12 +91,13 @@
             }
 
             .skeleton__line--after {
-                width: 7.2rem;
+                width: 7.1rem;
                 top: 2.7rem;
                 left: 6.9rem;
                 z-index: 0;
                 transform: rotate(32deg);
                 transform-origin: left;
+                
             }
 
             .skeleton__line--after2 {
@@ -103,6 +105,7 @@
                 top: 6.5rem;
                 left: calc(6.4rem + 6.5rem);
                 z-index: 0;
+                height: 1.07px;
             }
 
             .skeleton__icon {
@@ -133,6 +136,7 @@
                 z-index: 0;
                 transform: rotate(45deg);
                 transform-origin: left;
+                
             }
 
             .skeleton__line--after2 {
@@ -140,6 +144,7 @@
                 top: 11.5rem;
                 left: calc(10.1rem + 3.7rem);
                 z-index: 0;
+                height: 1.07px;
             }
 
             .skeleton__word {
@@ -166,6 +171,7 @@
                 z-index: 0;
                 transform: rotate(45deg);
                 transform-origin: left;
+                
             }
 
             .skeleton__line--after2 {
@@ -173,6 +179,7 @@
                 top: 16.5rem;
                 left: calc(10.7rem + 5.8rem);
                 z-index: 0;
+                height: 1.07px;
             }
 
             .skeleton__word {
@@ -199,6 +206,7 @@
                 z-index: 0;
                 transform: rotate(45deg);
                 transform-origin: left;
+                
             }
 
             .skeleton__line--after2 {
@@ -206,6 +214,7 @@
                 top: 21.5rem;
                 left: calc(7.6rem + 7.7rem);
                 z-index: 0;
+                height: 1.07px;
             }
 
             .skeleton__word {
@@ -232,13 +241,15 @@
                 z-index: 0;
                 transform: rotate(45deg);
                 transform-origin: left;
+                
             }
 
             .skeleton__line--after2 {
                 width: 15%;
                 top: 26.5rem;
-                left: calc(8.6rem + 7.9rem);
+                left: calc(8.6rem + 8rem);
                 z-index: 0;
+                height: 1.07px;
             }
 
             .skeleton__word {
@@ -264,6 +275,7 @@
                 top: 3.2rem;
                 left: 6.2rem;
                 z-index: 0;
+                
             }
 
             .skeleton__line--after2 {
@@ -295,6 +307,7 @@
                 z-index: 0;
                 transform: rotate(20deg);
                 transform-origin: left;
+                
             }
 
             .skeleton__line--after2 {
@@ -302,6 +315,7 @@
                 top: 7.8rem;
                 left: calc(6.4rem + 4.5rem);
                 z-index: 0;
+                height: 1.07px;
             }
 
             .skeleton__icon {
@@ -326,12 +340,13 @@
             }
 
             .skeleton__line--after {
-                width: 3.2rem;
+                width: 3.3rem;
                 top: 10.5rem;
                 left: 10.1rem;
                 z-index: 0;
                 transform: rotate(38deg);
                 transform-origin: left;
+                
             }
 
             .skeleton__line--after2 {
@@ -339,6 +354,7 @@
                 top: 12.5rem;
                 left: calc(10.1rem + 2.5rem);
                 z-index: 0;
+                height: 1.07px;
             }
 
             .skeleton__word {
@@ -365,6 +381,7 @@
                 z-index: 0;
                 transform: rotate(30deg);
                 transform-origin: left;
+                
             }
 
             .skeleton__line--after2 {
@@ -372,6 +389,7 @@
                 top: 17.5em;
                 left: calc(10.1rem + 3.5rem);
                 z-index: 0;
+                height: 1.07px;
             }
 
             .skeleton__word {
@@ -392,19 +410,21 @@
             }
 
             .skeleton__line--after {
-                width: 6.1em;
+                width: 6.08em;
                 top: 18.1rem;
                 left: 11.2rem;
                 z-index: 0;
                 transform: rotate(40deg);
                 transform-origin: left;
+                
             }
 
             .skeleton__line--after2 {
                 width: 15%;
                 top: 22rem;
-                left: calc(10.7rem + 5.2rem);
+                left: calc(10.7rem + 5.1rem);
                 z-index: 0;
+                height: 1.07px;
             }
 
             .skeleton__word {
@@ -425,12 +445,13 @@
             }
 
             .skeleton__line--after {
-                width: 10.5rem;
+                width: 10.46rem;
                 top: 19.6rem;
                 left: 8.1rem;
                 z-index: 0;
                 transform: rotate(45deg);
                 transform-origin: left;
+                
             }
 
             .skeleton__line--after2 {
@@ -438,6 +459,7 @@
                 top: 27rem;
                 left: calc(7.6rem + 7.9rem);
                 z-index: 0;
+                height: 1.07px;
             }
 
             .skeleton__word {
@@ -465,6 +487,7 @@
                 z-index: 0;
                 transform: rotate(45deg);
                 transform-origin: left;
+                
             }
 
             .skeleton__line--after2 {
@@ -472,6 +495,7 @@
                 top: 32.4rem;
                 left: 8.5rem;
                 z-index: 0;
+                height: 1.01px;
             }
 
             .skeleton__word {
@@ -499,6 +523,7 @@
                 z-index: 0;
                 transform: rotate(45deg);
                 transform-origin: left;
+                
             }
 
             .skeleton__line--after2 {
@@ -506,6 +531,7 @@
                 top: 37.2rem;
                 left: 8.6rem;
                 z-index: 0;
+                height: 1.07px;
             }
 
             .skeleton__word {
