fix: :bug: Fix fingerprints affected to the change of img

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4533,6 +4533,7 @@
                 background-repeat: no-repeat;
                 background-size: contain;
                 background-position: top;
+                mix-blend-mode: multiply;
 
                 height: 9.0625rem;
 
