fix: :bug: #33 (Update) Missing content according to figma v3

--- a/src/components/usual-suspects/modals/ModalInfantsDesktop.astro
+++ b/src/components/usual-suspects/modals/ModalInfantsDesktop.astro
@@ -206,7 +206,38 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
           </ul>
         </div>
       </div><!-- end of grid -->
-      <div class="grid grid--mt12">
+
+      <div class="grid">
+        <div class="left">
+          <p class="sub-heading">
+            Craniosynostosis<sup>1,7,9,16,18-20</sup>
+          </p>
+        </div>
+        <div class="middle">
+          <ul>
+            <li>Bones in skull fuse together too early</li>
+          </ul>
+        </div>
+        <div class="right">
+          <ul>
+            <li>
+              Test for persistently low alkaline phosphatase
+            </li>
+            <li>
+              Test for vitamin B<sub>6</sub>, calcium, vitamin D, and parathyroid hormone
+              <ul>
+                <li>
+                  Patients may have normal vitamin B<sub>6</sub> and urine PEA
+                </li>
+              </ul>
+            </li>
+            <li>Radiographs may help distinguish from hypophosphatasia</li>
+            <li>Clinical history and physical exam</li>
+          </ul>
+        </div>
+      </div><!-- end of grid -->
+
+      <div class="grid">
         <div class="left">
           <p class="sub-heading">
             Idiopathic juvenile osteoporosis<sup>1,7,16,19,21,22</sup>
